Removed libs directory and modified index

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 
   <!-- Scripts -->
-  <link rel="stylesheet" href="assets/libs/angular.min.js">
+  <link rel="stylesheet" href="node_modules/angular/angular.min.js">
 
 </head>
 <body>
