Added dist folder

--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
   <title>Weather App</title>
 
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="dist/css/styles.css">
 
   <!-- Scripts -->
   <link rel="stylesheet" href="node_modules/angular/angular.min.js">
 
 </head>
 <body>
-<div class="container">
-  <!-- Content here -->
-</div>
+  <div class="container">
+    <!-- Content here -->
+  </div>
 
-<script src="assets/js/app.js"></script>
+  <!-- Scripts -->
+  <script src="dist/js/app.js"></script>
+  <script src="dist/js/controllers.js"></script>
+  <script src="dist/js/services.js"></script>
+  <script src="dist/js/factories.js"></script>
 </body>
 </html>
