Removed files and added text to index

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
   <div class="container">
     <!-- Content here -->
+    <h1>Fabulous Weather App</h1>
+    <h2>Made by: Quincy and friend</h2>
   </div>
 
   <!-- Scripts -->
