--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="weatherApp">
 <head>
   <meta charset="UTF-8">
   <title>Weather App</title>
