Added factories and modified gulpfile

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <!-- Scripts -->
   <script src="dist/js/app.js"></script>
+  <script src="dist/js/routes.js"></script>
   <script src="dist/js/controllers.js"></script>
   <script src="dist/js/services.js"></script>
   <script src="dist/js/factories.js"></script>
