--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="dist/css/styles.css">
 
   <!-- Scripts -->
-  <link rel="stylesheet" href="node_modules/angular/angular.min.js">
+  <script src="node_modules/angular/angular.min.js"></script>
 
 </head>
 <body>
