--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <!-- Content here -->
     <h1>Fabulous Weather App</h1>
     <h2>Made by: Quincy and friend</h2>
+    <home-page></home-page>
   </div>
 
   <!-- Scripts -->
   <script src="dist/js/app.js"></script>
   <script src="dist/js/routes.js"></script>
   <script src="dist/js/controllers.js"></script>
-  <script src="dist/js/services.js"></script>
+  <script src="dist/js/directives.js"></script>
   <script src="dist/js/factories.js"></script>
 </body>
 </html>
