--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="dist/css/styles.css">
 
   <!-- Scripts -->
+  <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
   <script src="node_modules/angular/angular.min.js"></script>
 
 </head>
