--- a/app/shared/searchBar/searchBarView.html
+++ b/app/shared/searchBar/searchBarView.html
@@ -1,2 +1,2 @@
-<input type="text" ng-model="user.input">
-<button ng-click="fetchLocationData(user.input)">Search</button>
+<input type="text" ng-model="user.location">
+<button ng-click="fetchLocationData(user.location)">Search</button>
