Added functionality to the homecontroller and created the weatherdatafactory

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 <body>
   <div class="container">
     <!-- Content here -->
-    <h1>Fabulous Weather App</h1>
-    <h2>Made by: Quincy and friend</h2>
-    <home-page></home-page>
+    <h1>Weather App</h1>
+    <home-view></home-view>
   </div>
 
   <!-- Scripts -->
