--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
   <link rel="stylesheet" href="dist/css/styles.css">
 
   <!-- Scripts -->
-  <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
   <script src="node_modules/angular/angular.min.js"></script>
+  <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
 
 </head>
 <body>
   <div class="container">
     <!-- Content here -->
     <h1>Weather App</h1>
-    <home-view></home-view>
+
+    <div ui-view></div>
   </div>
 
   <!-- Scripts -->
