Added the skycons library and created a function that loads the weather icon

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="dist/css/styles.css">
 
   <!-- Scripts -->
+  <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
   <script src="node_modules/angular/angular.min.js"></script>
   <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
+
 
 </head>
 <body>
@@ -26,5 +28,8 @@
   <script src="dist/js/controllers.js"></script>
   <script src="dist/js/directives.js"></script>
   <script src="dist/js/factories.js"></script>
+
+  <!-- Libraries -->
+  <script src="assets/libs/skycons/skycons.js"></script>
 </body>
 </html>
