Finished the view template for the detail page and added basic styling

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="dist/css/styles.css">
 
+  <!-- Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
   <!-- Scripts -->
-  <script src="http://code.jquery.com/jquery-1.12.1.min.js"></script>
   <script src="node_modules/angular/angular.min.js"></script>
   <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
 
