--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href='http://fonts.googleapis.com/css?family=Lato&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
   <!-- Scripts -->
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
   <script src="node_modules/angular/angular.min.js"></script>
   <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
 
@@ -18,9 +19,6 @@
 </head>
 <body>
   <div class="container">
-    <!-- Content here -->
-    <h1>Weather App</h1>
-
     <div ui-view></div>
   </div>
 
