--- a/app/shared/searchBar/searchBarView.html
+++ b/app/shared/searchBar/searchBarView.html
@@ -1,2 +1,2 @@
-<input type="text" ng-model="user.location">
+<input type="text" ng-model="user.location" ng-keyup="$event.keyCode == 13 && fetchLocationData(user.location);">
 <button ng-click="fetchLocationData(user.location);">Search</button>
